--- a/inst/doc/NewFunc.Rmd
+++ b/inst/doc/NewFunc.Rmd
@@ -32,7 +32,7 @@ where k is the slope
 ## Rongo Kuta
 
 
-```{r, eval=FALSE}
+```{r}
 #R：
 RK4 <- function(dynamics, y0, t0 = 0, tn = 1, n = 1000)
 {
@@ -54,45 +54,64 @@ RK4 <- function(dynamics, y0, t0 = 0, tn = 1, n = 1000)
 }
 f1 <- function(t, v) 9.8 - v^2
 v1 <- RK4(dynamics = f1, y0 = 0, tn = 1, n = 5000)
-#C++
-# library(Rcpp)
-# #include <Rcpp.h>
-# using namespace Rcpp;
-# 
-# // [[Rcpp::export]]
-# void f(double t, NumericVector y, NumericVector dydt, double g, double c, double m) {
-#   dydt[0] = y[1];
-#   dydt[1] = g - (c / m) * y[1] * y[1];
-# }
-# // [[Rcpp::export]]
-# NumericMatrix rungeKutta(double t0, NumericVector y0, double h, int n, double g, double c, double m) {
-#   int dim = y0.length();
-#   
-#   NumericMatrix y(n + 1, dim);
-#   NumericVector k1(dim), k2(dim), k3(dim), k4(dim);
-#   
-#   double t = t0;
-#   y(0, _) = y0;
-#   
-#   for (int i = 0; i < n; i++) {
-#     f(t, y(i, _), k1, g, c, m);
-#     f(t + h / 2, y(i, _) + h * k1 / 2, k2, g, c, m);
-#     f(t + h / 2, y(i, _) + h * k2 / 2, k3, g, c, m);
-#     f(t + h, y(i, _) + h * k3, k4, g, c, m);
-#     
-#     y(i + 1, _) = y(i, _) + h * (k1 + 2 * k2 + 2 * k3 + k4) / 6;
-#     
-#     t += h;
-#   }
-#   
-#   return y;
-# }
+plot(v1)
+```
+C++:
+```{Rcpp, cache=TRUE}
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// Define the system of differential equations
+void f(double t, NumericVector y, NumericVector dydt, double g, double c, double m) {
+  dydt[0] = y[1];
+  dydt[1] = g - (c / m) * y[1] * y[1];
+}
+
+// [[Rcpp::export]]
+NumericMatrix rungeKutta(double t0, NumericVector y0, double h, int n, double g, double c, double m) {
+  int dim = y0.length();
+  
+  NumericMatrix y(n + 1, dim);
+  NumericVector k1(dim), k2(dim), k3(dim), k4(dim);
+  
+  double t = t0;
+  y(0, _) = y0;
+  
+  for (int i = 0; i < n; i++) {
+    f(t, y(i, _), k1, g, c, m);
+    f(t + h / 2, y(i, _) + h * k1 / 2, k2, g, c, m);
+    f(t + h / 2, y(i, _) + h * k2 / 2, k3, g, c, m);
+    f(t + h, y(i, _) + h * k3, k4, g, c, m);
+    
+    y(i + 1, _) = y(i, _) + h * (k1 + 2 * k2 + 2 * k3 + k4) / 6;
+    
+    t += h;
+  }
+  
+  return y;
+}
 
 ```
 
+```{r, rungeKutta()}
+library(Rcpp)
+ans <- rungeKutta(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
+plot(ans)
+```
+Speed vs:
+```{r}
+library(microbenchmark)
+tm1 <- microbenchmark::microbenchmark(
+  rnR = RK4(dynamics = function(t, v) 9.8 - v^2, y0=0, t0 = 0, tn = 1, n = 5000),
+  rnC = rungeKutta(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
+)
+print(summary(tm1)[,c(1,3,5,6)])
+```
+
+
 ## Eulerscheme
 
-```{r, eval=FALSE}
+```{r}
 #R：
 EulerScheme <- function(dynamics, y0, t0 = 0, tn = 1, n = 1000)
 {
@@ -109,36 +128,55 @@ EulerScheme <- function(dynamics, y0, t0 = 0, tn = 1, n = 1000)
 }
 f1 <- function(t, v) 9.8 - v^2
 v1 <- EulerScheme(dynamics = f1, y0 = 0, tn = 1, n = 5000)
-# C++
-# library(Rcpp)
-# #include <Rcpp.h>
-# using namespace Rcpp;
-# // [[Rcpp::export]]
-# void f2(double t, NumericVector y, NumericVector dydt, double g, double c, double m) {
-#   dydt[0] = y[1];
-#   dydt[1] = g - (c / m) * y[1] * y[1];
-# }
-# // [[Rcpp::export]]
-# NumericMatrix eulerMethod(double t0, NumericVector y0, double h, int n, double g, double c, double m) {
-#   int dim = y0.length();
-#   
-#   NumericMatrix y(n + 1, dim);
-#   
-#   double t = t0;
-#   y(0, _) = y0;
-#   
-#   for (int i = 0; i < n; i++) {
-#     NumericVector dydt(dim);
-#     f2(t, y(i, _), dydt, g, c, m);
-#     
-#     y(i + 1, _) = y(i, _) + h * dydt;
-#     
-#     t += h;
-#   }
-#   
-#   return y;
-# }
+plot(v1)
+
+```
+C++:
+```{Rcpp, cache = TRUE}
+#include <Rcpp.h>
+using namespace Rcpp;
 
 
+// Define the system of differential equations
+void f2(double t, NumericVector y, NumericVector dydt, double g, double c, double m) {
+  dydt[0] = y[1];
+  dydt[1] = g - (c / m) * y[1] * y[1];
+}
+
+// [[Rcpp::export]]
+NumericMatrix eulerMethod(double t0, NumericVector y0, double h, int n, double g, double c, double m) {
+  int dim = y0.length();
+  
+  NumericMatrix y(n + 1, dim);
+  
+  double t = t0;
+  y(0, _) = y0;
+  
+  for (int i = 0; i < n; i++) {
+    NumericVector dydt(dim);
+    f2(t, y(i, _), dydt, g, c, m);
+    
+    y(i + 1, _) = y(i, _) + h * dydt;
+    
+    t += h;
+  }
+  
+  return y;
+}
+```
+```{r, eulerMethod()}
+library(Rcpp)
+ans <- eulerMethod(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
+plot(ans)
+```
+
+Speed vs:
+```{r, EulerScheme(),eulerMethod()}
+library(microbenchmark)
+tm1 <- microbenchmark::microbenchmark(
+  rnR = EulerScheme(dynamics = function(t, v) 9.8 - v^2, y0=0, t0 = 0, tn = 1, n = 5000),
+  rnC = eulerMethod(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
+)
+print(summary(tm1)[,c(1,3,5,6)])
 ```
 
