--- a/vignettes/NewFunc.Rmd
+++ b/vignettes/NewFunc.Rmd
@@ -18,6 +18,8 @@ My topic revolves around ion beam control and I need to simulate ion trajectorie
 
 The fourth-order Dragon Gekkuta method takes the following form
 
+$$g-\frac{kv}{m}=\frac{dv}{dt},$$
+
 $$
 \begin{cases}y_{n+1}=y_n+\frac{1}{6}\big(k_1+2k_2+2k_3+k_4\big)\\k_1=hf(x_n,y_n)\\k_2=hf(x_n+\frac{h}{2},y_n+\frac{k_1}{2})\\k_3=hf(x_n+\frac{h}{2},y_n+\frac{k_2}{2})\\k_4=hf(x_n+h,y_n+k_3)\end{cases}
 $$
@@ -95,15 +97,15 @@ NumericMatrix rungeKutta(double t0, NumericVector y0, double h, int n, double g,
 
 ```{r, rungeKutta()}
 library(Rcpp)
-ans <- rungeKutta(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
-plot(ans)
+ans <- rungeKutta(t0 = 0, y0 = c(0,0), h = 0.0002, n = 5000, g = 9.8, c = 1.0, m = 1.0)
+plot(ans[,2])
 ```
 Speed vs:
 ```{r}
 library(microbenchmark)
 tm1 <- microbenchmark::microbenchmark(
   rnR = RK4(dynamics = function(t, v) 9.8 - v^2, y0=0, t0 = 0, tn = 1, n = 5000),
-  rnC = rungeKutta(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
+  rnC = rungeKutta(t0 = 0, y0 = c(0,0), h = 0.0002, n = 5000, g = 9.8, c = 1.0, m = 1.0)
 )
 print(summary(tm1)[,c(1,3,5,6)])
 ```
@@ -166,8 +168,8 @@ NumericMatrix eulerMethod(double t0, NumericVector y0, double h, int n, double g
 ```
 ```{r, eulerMethod()}
 library(Rcpp)
-ans <- eulerMethod(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
-plot(ans)
+ans <- eulerMethod(t0 = 0, y0 = c(0,0), h = 0.0002, n = 5000, g = 9.8, c = 1.0, m = 1.0)
+plot(ans[,2])
 ```
 
 Speed vs:
@@ -175,7 +177,7 @@ Speed vs:
 library(microbenchmark)
 tm1 <- microbenchmark::microbenchmark(
   rnR = EulerScheme(dynamics = function(t, v) 9.8 - v^2, y0=0, t0 = 0, tn = 1, n = 5000),
-  rnC = eulerMethod(t0 = 0, y0 = c(0,0), h = 0.0002, n = 10000, g = 9.8, c = 0.5, m = 1.0)
+  rnC = eulerMethod(t0 = 0, y0 = c(0,0), h = 0.0002, n = 5000, g = 9.8, c = 1, m = 1.0)
 )
 print(summary(tm1)[,c(1,3,5,6)])
 ```
